# llamaindex

./: .env.example  .gitignore  CHANGELOG.md  CHECKLIST.md  ENTITY_FILTERING_GUIDE.md  ENTITY_FILTERING_QUICK_REF.md  EXAMPLES_METADATA.py  IMPLEMENTATION_SUMMARY.md  LICENSE  METADATA_EXTRACTION_GUIDE.md  README.md  README_GUIDE.md  VISUAL_GUIDE.md  bm25_simple.py  codestral_test.py  config.py  database_operation.py  db.sh  db_operation.py  example_automerge.py  extraction_schemas.py  extraction_visualization.html  gliner_extractor.py  langextract_integration.py  langextract_schemas.py  langextract_simple.py  llama_automerge.py  llama_bm25  llama_bm25.py  llama_bm25_clean.py  llama_bm25_simple.py  llama_sentence_window.py  llamaparse.py  main.py  milvus.py  minerU.py  mineru_wrapper.py  pyproject.toml  queries.py  rag_factory.py  (+17 more)
archive/: database_operation_simple_archived.py  extraction_visualization.html  langextract_simple.py  llama_automerge.py  llama_bm25.py  llama_bm25_clean.py  llama_bm25_simple_archived.py  llamaparse.py  llamaparse_archived.py  requirements.txt  utility_simple_archived.py
benchmark/: download_dataset.py  run_benchmark.py
benchmark/datasets/paul_graham/: paul_graham_qa.json  paul_graham_qa.md
benchmark/evaluators/: llm_judge.py  retrieval_eval.py
benchmark/results/: benchmark_q1-3_20260215_080248.json  benchmark_q1-3_20260215_080248.md  benchmark_q10_20260221_085119.json  benchmark_q10_20260221_085119.md  benchmark_q21_20260221_091212.json  benchmark_q21_20260221_091212.md  benchmark_q39_20260215_172259.json  benchmark_q39_20260215_172259.md  benchmark_q4_20260215_153130.json  benchmark_q4_20260215_153130.md  benchmark_q5_20260215_161553.json  benchmark_q5_20260215_161553.md
test/: check_metadata.py  check_node_ids.py  check_node_in_milvus.py  check_node_in_mongo.py  demo_metadata_comparison.py  drop_collections.py  fetch_node.py  get_inclusive_schema.py  list_mongo.py  test_entity_filtering.py  test_equation_parsing.py  test_fig_eq_matching.py  test_find_figure_pages.py  test_gliner_mineru.py  test_gliner_query.py  test_langextract_install.py  test_langextract_schema.py  test_mineru_nodes.py  test_mongo_entity_metadata.py  test_node_sizes.py
