[project]
name = "llamaindex"
version = "0.2.0"
description = "Advanced Hybrid RAG for Multi-Domain Document Analysis"
license = {text = "Apache-2.0"}
requires-python = ">=3.11.1"
dependencies = [
    "accelerate==0.34.2",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "aiosqlite==0.21.0",
    "annotated-types==0.7.0",
    "anthropic>=0.72.0",
    "anyio==4.11.0",
    "asttokens==3.0.0",
    "attrs==25.4.0",
    "banks==2.2.0",
    "beautifulsoup4==4.12.3",
    "boto3==1.40.64",
    "botocore==1.40.64",
    "cachetools==5.5.0",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "click==8.1.7",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "comm==0.2.3",
    "dataclasses-json==0.6.7",
    "datasets==3.0.1",
    "decorator==5.2.1",
    "dill==0.3.8",
    "dirtyjson==1.0.8",
    "diskcache==5.6.3",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "docstring-parser==0.17.0",
    "environs==9.5.0",
    "eval-type-backport==0.2.2",
    "evaluate==0.4.3",
    "executing==2.2.1",
    "filelock==3.20.0",
    "filetype==1.2.0",
    "flagembedding==1.2.11",
    "flatbuffers==24.3.25",
    "frozenlist==1.8.0",
    "fsspec==2024.6.1",
    "gliner",
    "google-auth==2.35.0",
    "google-genai>=1.2.0",
    "greenlet==3.0.3",
    "griffe==1.14.0",
    "grpcio==1.66.1",
    "guidance==0.1.16",
    "guidance-stitch==0.1.5",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx==0.27.0",
    "huggingface-hub==0.23.5",
    "humanfriendly==10.0",
    "idna==3.11",
    "invoke==2.2.1",
    "ipython==9.6.0",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.8",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jiter==0.11.1",
    "jmespath==1.0.1",
    "joblib==1.5.2",
    "jsonpath-python==1.0.6",
    "jupyterlab-widgets==3.0.16",
    "keybert==0.8.5",
    "langextract>=1.0.9",
    "llama-index==0.14.7",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-extractors-entity>=0.4.1",
    "llama-index-legacy>=0.9.48.post4",
    "llama-index-llms-anthropic>=0.10.1",
    "llama-index-postprocessor-colbert-rerank>=0.4.1",
    "llama-index-question-gen-guidance>=0.4.1",
    "llama-index-retrievers-bm25>=0.6.5",
    "llama-index-storage-docstore-mongodb>=0.4.1",
    "llama-index-storage-kvstore-mongodb>=0.4.1",
    "llama-index-vector-stores-milvus>=0.9.3",
    "llama-parse==0.5.2",
    "llguidance==1.1.0",
    "lxml>=6.0.2",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.3",
    "marshmallow==3.22.0",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "milvus-lite==2.4.10",
    "minijinja==2.2.0",
    "motor==3.7.1",
    "mpmath==1.3.0",
    "multidict==6.7.0",
    "multiprocess==0.70.16",
    "mypy-extensions==1.0.0",
    "nest-asyncio==1.6.0",
    "networkx==3.3",
    "nltk==3.9.1",
    "numpy==1.26.4",
    "onnxruntime==1.20.1",
    "ordered-set==4.1.0",
    "packaging==25.0",
    "parso==0.8.5",
    "peft==0.13.0",
    "pexpect==4.9.0",
    "pillow==12.0.0",
    "pip==24.3.1",
    "platformdirs==4.3.6",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "protobuf==5.28.0",
    "psutil==7.1.3",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==22.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "pydantic==2.12.3",
    "pydantic-core==2.41.4",
    "pygments==2.19.2",
    "pymongo==4.15.3",
    "pymupdf==1.26.5",
    "pymupdfb==1.24.10",
    "pystemmer==2.2.0.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "regex==2025.10.23",
    "requests==2.32.5",
    "rich==13.8.0",
    "rsa==4.9",
    "s3transfer==0.14.0",
    "safetensors==0.6.2",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "sentence-transformers==3.0.1",
    "sentencepiece==0.2.1",
    "seqeval==1.2.2",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "span-marker==1.5.0",
    "sqlalchemy==2.0.44",
    "stack-data==0.6.3",
    "striprtf==0.0.26",
    "sympy==1.14.0",
    "tabulate>=0.9.0",
    "tenacity==8.5.0",
    "threadpoolctl==3.6.0",
    "tiktoken==0.12.0",
    "tokenizers==0.19.1",
    "torch==2.9.0",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.40.2",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "ujson==5.11.0",
    "urllib3==2.5.0",
    "wcwidth==0.2.14",
    "wheel==0.44.0",
    "widgetsnbextension==4.0.15",
    "wrapt==1.17.3",
    "xxhash==3.6.0",
    "yarl==1.22.0",
]
